--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,11 @@
 }
 
 body {
+  background-color: #efefef;
   margin: 0;
   padding: 0;
+  width: 100%;
+  height: 100%;
   font-family: "Ubuntu", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
