--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,6 +5,18 @@ header {
   height: fit-content;
   background-color: #F9A03F;
 }
+header>div {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  margin:auto;
+}
+header>div>nav {
+  margin:auto;
+}
+header>div>span {
+  padding-top: 10px;
+}
 .logo {
   width:25%;
   z-index: 0;
@@ -13,7 +25,8 @@ header {
   padding-left: 5px;
 }
 h1>a, nav>a {
-  color: #7C616C;
+  color: #67515A;
+  font-weight: 800;
   text-decoration: none;
   z-index: 2;
 }
@@ -21,6 +34,7 @@ h1>a {
   padding-left: 10px;
 }
 h1 {
+  font-size: 35px;
   position:relative;
   width: 66%;
   text-align: center;
@@ -29,8 +43,10 @@ h1 {
   justify-content: center;
   align-items: center;
 }
-nav {
+header>nav {
+  font-size: 20px;
   width: 33%;
   display: flex;
-  justify-content: space-around;
+  flex-direction: column;
+  align-items: center;
 }
