--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -23,7 +23,7 @@ section {
   flex-direction: column;
   width: 100%;
   height: 100%;
-
+  margin: 10px 0;
 }
 section>h2 {
   width:85%;
@@ -34,4 +34,43 @@ section>p {
   width: 75%;
   margin: auto;
   padding: 10px 0px;
+}
+
+@media all and (min-width: 450px) {
+  section>h2 {
+    width: 65%;
+  }
+  footer>button {
+  align-self: flex-end;
+}
+}
+@media all and (min-width: 550px) {
+  header>nav {
+    flex-direction:row;
+    justify-content: space-around;
+  }
+  section>h2 {
+    width: 55%;
+  }
+  h1 {
+    font-size: 45px;
+  }
+}
+@media all and (min-width: 700px) {
+  h1 {
+    font-size: 55px;
+    
+  }
+  /* .logo {
+    width: 135px;
+  } */
+  section>h2, section>p {
+    width: 50%;
+    text-align: center;
+  }
+}
+@media all and (min-width: 950px) {
+  .logo {
+    width: 15%;
+  }
 }
