--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -41,8 +41,15 @@ section>p {
     width: 65%;
   }
   footer>button {
-  align-self: flex-end;
-}
+    align-self: flex-end;
+  }
+  #students {
+    width: 85%;
+    margin:auto;
+  }
+  #students td, #students th {
+    padding: 8px;
+  }
 }
 @media all and (min-width: 550px) {
   header>nav {
@@ -54,6 +61,14 @@ section>p {
   }
   h1 {
     font-size: 45px;
+  }
+  #students, .word-container>p {
+    width: 75%;
+    padding-bottom: 10px;
+    margin:auto;
+  }
+  .practice-container {
+    width: 85%;
   }
 }
 @media all and (min-width: 700px) {
