--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -15,6 +15,10 @@ button {
   border-radius: 10px;
   box-shadow: 1px 1px 2px #121212;
 }
+button>a {
+  color:#efefef;
+  text-decoration: none;
+}
 button:hover {
   transform: translateY(-5px);
 }
