--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -17,23 +17,30 @@ header>div>nav {
 }
 header>div>span {
   padding-top: 10px;
+
 }
 .logo {
   width:25%;
-  /* z-index: 0;
-  position: absolute; */
-  /* align-self:flex-start; */
+  
   padding-left: 5px;
+}
+@media all and (max-width: 375px) {
+  .logo {
+    z-index: 0;
+    position: absolute; 
+    align-self:flex-start;
+  }
 }
 h1>a, nav>a {
   color: #503F46;
+  width:100%;
   font-weight: 800;
   text-decoration: none;
   z-index: 2;
 }
-h1>a {
+/* h1>a {
   padding-left: 10px;
-}
+} */
 h1 {
   font-size: 35px;
   position:relative;
